[gd_scene load_steps=29 format=3 uid="uid://u568wjkve5uk"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_108ws"]
[ext_resource type="FontFile" uid="uid://bgijmn0kby47d" path="res://Recursos/Assets_PixelAdventure/Fonts/Kenney Pixel Square.ttf" id="1_i0tdl"]
[ext_resource type="Texture2D" uid="uid://cx1qsqa4qwsus" path="res://Recursos/Assets_PixelAdventure/Parallax/parallax-00.png" id="1_knupd"]
[ext_resource type="FontFile" uid="uid://c62ic7gyuqy1" path="res://Recursos/Assets_PixelAdventure/Fonts/Kenney Rocket Square.ttf" id="2_2uvoe"]
[ext_resource type="Texture2D" uid="uid://d02l7nnnfajd3" path="res://Recursos/Assets_PixelAdventure/Parallax/parallax-01.png" id="2_53c8u"]
[ext_resource type="Texture2D" uid="uid://cqgs3aseyvj8m" path="res://Recursos/Assets_PixelAdventure/Parallax/parallax-02.png" id="3_gdyhv"]
[ext_resource type="Texture2D" uid="uid://cq5tved76nlii" path="res://Recursos/Personajes/Slime_Sprites/Slime_Sprites.png" id="5_00r40"]
[ext_resource type="Texture2D" uid="uid://c3qjgcxccp7c0" path="res://Recursos/Tree.png" id="5_s1p8l"]
[ext_resource type="Texture2D" uid="uid://b7hjqcga15ej1" path="res://Recursos/Assets_PixelAdventure/Items/Fruits/Apple.png" id="7_hsvq1"]
[ext_resource type="TileSet" uid="uid://03q4hlnvggcw" path="res://Recursos/TilesMap_Saved/TileMap_Forest.tres" id="8_8d777"]
[ext_resource type="AudioStream" uid="uid://dd0vqhokngryr" path="res://Recursos/sonidos/background_weird.mp3" id="11_a7f4s"]
[ext_resource type="AudioStream" uid="uid://d2x2di2busrsf" path="res://Recursos/sonidos/tap.mp3" id="12_7w0rf"]

[sub_resource type="Animation" id="Animation_sukoc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_y1wqi"]
resource_name = "idle"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jby7n"]
_data = {
"RESET": SubResource("Animation_sukoc"),
"idle": SubResource("Animation_y1wqi")
}

[sub_resource type="Animation" id="Animation_jlbxa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [106]
}

[sub_resource type="Animation" id="Animation_ldsh8"]
resource_name = "idle_red"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [106, 107, 108, 109, 121, 122, 123, 124, 125, 126]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gj8as"]
_data = {
"RESET": SubResource("Animation_jlbxa"),
"idle_red": SubResource("Animation_ldsh8")
}

[sub_resource type="Animation" id="Animation_38cv5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [160]
}

[sub_resource type="Animation" id="Animation_tgb8w"]
resource_name = "idle_yellow"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [160, 161, 162, 163, 164, 165, 166, 167, 168, 169]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kej80"]
_data = {
"RESET": SubResource("Animation_38cv5"),
"idle_yellow": SubResource("Animation_tgb8w")
}

[sub_resource type="Animation" id="Animation_ah2mm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_aoyti"]
resource_name = "idle_green"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bno63"]
_data = {
"RESET": SubResource("Animation_ah2mm"),
"idle_green": SubResource("Animation_aoyti")
}

[sub_resource type="Animation" id="Animation_t47v6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [50]
}

[sub_resource type="Animation" id="Animation_55rg6"]
resource_name = "idle_blue"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [50, 55, 56, 57, 58, 59]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d23bf"]
_data = {
"RESET": SubResource("Animation_t47v6"),
"idle_blue": SubResource("Animation_55rg6")
}

[sub_resource type="LabelSettings" id="LabelSettings_8fnhr"]
line_spacing = 4.0
font = ExtResource("1_i0tdl")
outline_size = 4
outline_color = Color(0.00784314, 0.00392157, 0.00392157, 1)

[node name="Main_menu" type="Node"]
script = ExtResource("1_108ws")

[node name="Background" type="Node" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="Background"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background/ParallaxBackground"]
position = Vector2(-253, 102)

[node name="Sprite2D" type="Sprite2D" parent="Background/ParallaxBackground/ParallaxLayer"]
texture = ExtResource("1_knupd")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="Background/ParallaxBackground"]
position = Vector2(-253, 102)

[node name="Sprite2D" type="Sprite2D" parent="Background/ParallaxBackground/ParallaxLayer2"]
texture = ExtResource("2_53c8u")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="Background/ParallaxBackground"]
position = Vector2(-253, 102)

[node name="Sprite2D" type="Sprite2D" parent="Background/ParallaxBackground/ParallaxLayer3"]
texture = ExtResource("3_gdyhv")

[node name="Tree" type="Node" parent="Background"]

[node name="Sprite2D" type="Sprite2D" parent="Background/Tree"]
position = Vector2(248, 98)
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_s1p8l")

[node name="Apples" type="Node" parent="Background/Tree"]

[node name="Apple" type="Node" parent="Background/Tree/Apples"]

[node name="Sprite2D" type="Sprite2D" parent="Background/Tree/Apples/Apple"]
position = Vector2(219.8, 93.8)
scale = Vector2(0.8, 0.8)
texture = ExtResource("7_hsvq1")
hframes = 17

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background/Tree/Apples/Apple"]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_jby7n")
}

[node name="Apple2" type="Node" parent="Background/Tree/Apples"]

[node name="Sprite2D" type="Sprite2D" parent="Background/Tree/Apples/Apple2"]
position = Vector2(264.8, 94.8)
scale = Vector2(0.8, 0.8)
texture = ExtResource("7_hsvq1")
hframes = 17

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background/Tree/Apples/Apple2"]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_jby7n")
}

[node name="Apple3" type="Node" parent="Background/Tree/Apples"]

[node name="Sprite2D" type="Sprite2D" parent="Background/Tree/Apples/Apple3"]
position = Vector2(285.8, 67.8)
scale = Vector2(0.8, 0.8)
texture = ExtResource("7_hsvq1")
hframes = 17

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background/Tree/Apples/Apple3"]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_jby7n")
}

[node name="Apple4" type="Node" parent="Background/Tree/Apples"]

[node name="Sprite2D" type="Sprite2D" parent="Background/Tree/Apples/Apple4"]
position = Vector2(233, 66)
scale = Vector2(0.8, 0.8)
texture = ExtResource("7_hsvq1")
hframes = 17

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background/Tree/Apples/Apple4"]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_jby7n")
}

[node name="SlimeM_Red" type="Node" parent="Background"]

[node name="Sprite2D" type="Sprite2D" parent="Background/SlimeM_Red"]
position = Vector2(274, 151)
texture = ExtResource("5_00r40")
hframes = 10
vframes = 20
frame = 106

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background/SlimeM_Red/Sprite2D"]
autoplay = "idle_red"
libraries = {
"": SubResource("AnimationLibrary_gj8as")
}

[node name="SlimeM_Yellow" type="Node" parent="Background"]

[node name="Sprite2D" type="Sprite2D" parent="Background/SlimeM_Yellow"]
position = Vector2(146, 150.798)
texture = ExtResource("5_00r40")
hframes = 10
vframes = 20
frame = 160

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background/SlimeM_Yellow/Sprite2D"]
autoplay = "idle_yellow"
libraries = {
"": SubResource("AnimationLibrary_kej80")
}

[node name="SlimeM_Green" type="Node" parent="Background"]

[node name="Sprite2D" type="Sprite2D" parent="Background/SlimeM_Green"]
position = Vector2(182, 150.798)
texture = ExtResource("5_00r40")
flip_h = true
hframes = 10
vframes = 20

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background/SlimeM_Green/Sprite2D"]
autoplay = "idle_green"
libraries = {
"": SubResource("AnimationLibrary_bno63")
}

[node name="SlimeM_Blue" type="Node" parent="Background"]

[node name="Sprite2D" type="Sprite2D" parent="Background/SlimeM_Blue"]
position = Vector2(224, 151)
texture = ExtResource("5_00r40")
flip_h = true
hframes = 10
vframes = 20
frame = 50

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background/SlimeM_Blue/Sprite2D"]
autoplay = "idle_blue"
libraries = {
"": SubResource("AnimationLibrary_d23bf")
}

[node name="TileMap" type="TileMap" parent="Background"]
position = Vector2(-253, 102)
tile_set = ExtResource("8_8d777")
format = 2
layer_0/tile_data = PackedInt32Array(196632, 196608, 0, 262168, 196608, 1, 327704, 131072, 3, 393240, 196608, 3, 458776, 131072, 4, 262169, 196608, 1, 327705, 262144, 2, 393241, 262144, 3, 458777, 196608, 4, 262170, 262144, 1, 327706, 131072, 3, 393242, 327680, 3, 458778, 262144, 4, 262171, 196608, 1, 327707, 196608, 2, 393243, 196608, 3, 458779, 327680, 4, 262172, 196608, 1, 327708, 131072, 3, 393244, 262144, 3, 458780, 196608, 4, 262173, 262144, 1, 327709, 196608, 2, 393245, 196608, 3, 458781, 262144, 4, 196638, 196608, 0, 262174, 196608, 1, 327710, 131072, 3, 393246, 262144, 3, 458782, 131072, 4, 196639, 131072, 0, 262175, 262144, 1, 327711, 131072, 3, 393247, 196608, 3, 458783, 196608, 4, 196640, 196608, 0, 262176, 196608, 1, 327712, 262144, 2, 393248, 262144, 3, 458784, 262144, 4, 262177, 262144, 1, 327713, 262144, 3, 393249, 131072, 3, 458785, 327680, 4, 262178, 393216, 2, 327714, 393216, 3, 393250, 393216, 3, 458786, 393216, 4, 196631, 131072, 0, 262167, 131072, 1, 327703, 65536, 3, 393239, 65536, 3, 458775, 65536, 4, 196634, 131072, 0, 196642, 393216, 1)

[node name="Label" type="Label" parent="."]
offset_left = 69.0
offset_top = 19.0
offset_right = 303.0
offset_bottom = 47.0
scale = Vector2(1.2, 1.2)
text = "Slimes love the apples"
label_settings = SubResource("LabelSettings_8fnhr")

[node name="Multiplayer" type="VBoxContainer" parent="."]
visible = false
offset_left = 139.0
offset_top = 55.0
offset_right = 282.0
offset_bottom = 148.0

[node name="Host" type="Button" parent="Multiplayer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2uvoe")
text = "Hostear"

[node name="Join" type="Button" parent="Multiplayer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2uvoe")
text = "unirse"

[node name="back" type="Button" parent="Multiplayer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2uvoe")
text = "atras"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 92.0
offset_top = 55.798
offset_right = 268.0
offset_bottom = 179.798
scale = Vector2(0.5, 0.5)

[node name="soloPlay" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2uvoe")
text = "Solo"

[node name="backgroundWeird" type="AudioStreamPlayer" parent="VBoxContainer/soloPlay"]
stream = ExtResource("11_a7f4s")

[node name="select" type="AudioStreamPlayer" parent="VBoxContainer/soloPlay"]
stream = ExtResource("12_7w0rf")

[node name="multiplayer" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2uvoe")
text = "Multiplayer"

[node name="settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2uvoe")
text = "Settings"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2uvoe")
text = "Exit "

[connection signal="ready" from="Background" to="." method="_on_background_ready"]
[connection signal="pressed" from="Multiplayer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Multiplayer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Multiplayer/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/soloPlay" to="." method="_on_solo_play_pressed"]
[connection signal="finished" from="VBoxContainer/soloPlay/backgroundWeird" to="." method="_on_background_weird_finished"]
[connection signal="pressed" from="VBoxContainer/multiplayer" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
